10/6/10 change dielectric "Show All Charges" to be proportional to E_dielectric
10/6/10 clean up encapsulation of pitch and yaw properties for 3D mvt
10/6/10 move dielectric colors to CLPaints
10/6/10 move dielectric constants to CLConstants
10/6/10 use bold font for Plate Charge control title, to be consistent with bar meters
10/6/10 cleanup and doc grid-based views (plate charge, field lines, dielectric charge)
# 0.00.27 (44751) Oct 6, 2010
10/6/10 change E-field display algorithm so that lines smoothly appear/disappear at edges of plate
10/6/10 default to Dieletric tab for dev version
10/6/10 gray out Voltmeter and Electric Field Detector check boxes until they are implemented
10/5/10 add localized strings used by E-Field Detector
10/5/10 remove some dependencies on DielectricModel
10/5/10 specify default locations for meters in CLConstants
# 0.00.26 (44729) Oct 5, 2010
10/5/10 remove stubs for Save/Load feature, not necessary per Noah P
10/5/10 start up with Introduction tab selected
10/5/10 fix: make View controls reset properly
10/5/10 implemented Introduction tab (subclass of Dielectric tab)
10/5/10 implemented Reset All feature
10/5/10 fix: knob on voltage slider and Plate Charge slider jumps to center when you mouseDown on it
10/5/10 decided not to add curvature to field lines on perimeter of plates
10/5/10 make battery voltage slider and Plate Charge slider snap to zero
10/5/10 when E_effective is zero, use zero spacing between +- pairs on dielectric
# 0.00.25 (44692) Oct 4, 2010
10/4/10 first version of dielectric "all charges" view
10/4/10 add convenience method for getting dielectric width, use in views
# 0.00.24 (44686) Oct 4, 2010
10/4/10 use the same min/max for representing top plate charge and dielectric excess charge
10/4/10 make number of excess charges on dielectric proportional to sqrt(Q_excess_dielectric)
10/4/10 move plate charge grid strategy into its own top-level class file
# 0.00.23 (44668) Oct 4, 2010